# tree-sitter-cypher

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  grammar.ts  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
bindings/c/: tree-sitter-cypher.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cypher/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCypher/: cypher.h
bindings/swift/TreeSitterCypherTests/: TreeSitterCypherTests.swift
queries/: highlights.scm
scripts/: gen_corpus.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: atom.txt  comment.txt  generated-legacy.txt  generated.txt  invalid_tree.txt  literal.txt  match.txt  reserved_word.txt  symbolic_name.txt
test/corpus/M21/: CIP-2018-10-29.txt  CIP-2021-08-10.txt
test/corpus/M22/: non_arithmetic_expr_chain.txt
test/corpus/legacy/: commands.txt  grammar.txt  list_expression.txt  pre-parser.txt  reduce.txt  shortestpath.txt  start.txt
test/highlight/: literal.cql  number.cql  operator.cql  string.cql
