[package]
name = "tree-sitter-cypher"
description = "Cypher Tree-sitter grammar"
version = "0.0.1"
authors = [""]
license = "UNLICENSE"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cypher"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "git+https://github.com/taekwombo/tree-sitter-cypher.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
