[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-cypher"
description = "Cypher Tree-sitter grammar"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "cypher"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{  }]
requires-python = ">=3.10"
license.text = "UNLICENSE"
readme = "README.md"

[project.urls]
Homepage = "git+https://github.com/taekwombo/tree-sitter-cypher.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
